add missing localization subscripts

--- a/quillen.tex
+++ b/quillen.tex
@@ -1040,16 +1040,16 @@ In what follows, the reader should carefully remember the degree conventions ste
 \begin{proof}[{Proof of \Cref{CGenerationForFiniteCplx}}]
 We can immediately reduce the claim in two ways.  First, it is true if and only if it is also true for reduced cohomology.  Second, because \(MU^{2*+1}(*) = 0\),\footnote{This is a direct consequence of the \emph{geometric} definition of \(U\)--structured bordism.} we can restrict attention just to \(MU^{2*}(X)\), since we can then handle the odd-degree parts of \(MU^*(X)\) by suspending \(X\) once.  Defining \[R^{2*} := C \cdot \sum_{q > 0} MU^{2q}(X),\] we can thus focus on the claim \[\widetilde{MU}^{2*}(X) \stackrel{?}{=} C \cdot \sum_{q > 0} MU^{2q}(X).\]  Noting that the claim is trivially true for all positive values of \(*\), we will show this by working \(p\)--locally and inducting on the value of ``\(-*\)''.
 
-Suppose that \[R^{-2j}_{(p)} = \widetilde{MU}^{-2j}(X)_{(p)}\] for \(j < q\) and consider \(x \in \widetilde{MU}^{-2q}(X)\).  Then, for \(m \gg 0\), we have
+Suppose that \[R^{-2j}_{(p)} = \widetilde{MU}^{-2j}(X)_{(p)}\] for \(j < q\) and consider \(x \in \widetilde{MU}^{-2q}(X)_{(p)}\).  Then, for \(m \gg 0\), we have
 \begin{align*}
 w^m P^{C_p}(x) & = \sum_{|\alpha| \le m-q} w^{m-q - |\alpha|} a(t)^\alpha s_\alpha x \\
 & = w^{m-q} x + \sum_{\substack{|\alpha| \le m-q \\ \alpha \ne 0}} w^{m-q - |\alpha|} a(t)^\alpha s_\alpha x.
 \end{align*}
 Recall that \(w\) is a power series in \(t\) with coefficients in \(C\) and leading term \((p-1)! \cdot t^{p-1}\), so that \(t^{p-1} = w \cdot \theta(t)\) for some multiplicatively invertible series \(\theta(t)\) with coefficients in \(C\).  Since \(s_\alpha\) raises degree, we have \(s_\alpha x \in R\) by the inductive hypothesis, and we may thus collect all those terms (as well as many factors of \(\theta(t)^{-1}\)) into a series \(\psi_x(t) \in R_{(p)}\llbracket t \rrbracket\) to write \[t^N(w^q P^{C_p}(x) - x) = \psi_x(t),\] where \(N = (m-q)(p-1)\).
 
-Consider the set of possible integers \(N\) for which we can write such an equation---we know that \(N = (m-q)(p - 1)\) works, but we now also consider values of \(N\) which are not multiples of \((p - 1)\).  We aim to conclude that \(N = 1\) is the minimum of this set, so suppose that \(N\) is the minimum such value.  Using \Cref{RestrictingSteenrodOpToBasepoint}, we find that restricting this equation along the inclusion \(i\co X \to X \times BU(1)[p]\) sets \(t = 0\) and yields \(\psi_x(0) = 0\).  It follows that \(\psi_x(t) = t \phi_x(t)\) is at least once \(t\)--divisible, and thus \[t (t^{N-1}(w^q P^{C_p}x - x) - \phi_x(t)) = 0.\]  Appealing to \Cref{QuillensGysinFact}, we produce a class \(y \in \widetilde{MU}^{-2q + 2(N-1)}(X)\) with \[t^{N-1}(w^q P^{C_p}(x) - x) = \phi_x(x) + y \<p\>(t).\]  If \(N > 1\), then \(y \in R_{(p)}\) for degree reasons and hence the right-hand side gives a series expansion contradicting our minimality hypothesis.  So, we have \(N = 1\); the class \(y\) lies in the critical degree \(-2q\); and the outer factor of \(t^{N-1}\) is not present in the last expression.\footnote{One can interpret the proof thus far as giving a bound on the amount of \(w\)--torsion needed to get the stability relation described in \Cref{QuillensKeyRelation}.  Our answer is quite surprising: we have found that we need just a single \(w\) (indeed, a single \(t\)), which isn't much stability at all!}  Restricting along \(i\) again to set \(w = t = 0\) and \(P^{C_p}(x) = x^p\), we obtain the equation \[\left. \begin{array}{rr} -x & \text{if \(q > 0\)} \\ x^p - x & \text{if \(q = 0\)} \end{array} \right\} = \phi_x(0) + py.\]
+Consider the set of possible integers \(N\) for which we can write such an equation---we know that \(N = (m-q)(p - 1)\) works, but we now also consider values of \(N\) which are not multiples of \((p - 1)\).  We aim to conclude that \(N = 1\) is the minimum of this set, so suppose that \(N\) is the minimum such value.  Using \Cref{RestrictingSteenrodOpToBasepoint}, we find that restricting this equation along the inclusion \(i\co X \to X \times BU(1)[p]\) sets \(t = 0\) and yields \(\psi_x(0) = 0\).  It follows that \(\psi_x(t) = t \phi_x(t)\) is at least once \(t\)--divisible, and thus \[t (t^{N-1}(w^q P^{C_p}x - x) - \phi_x(t)) = 0.\]  Appealing to \Cref{QuillensGysinFact}, we produce a class \(y \in \widetilde{MU}^{-2q + 2(N-1)}(X)_{(p)}\) with \[t^{N-1}(w^q P^{C_p}(x) - x) = \phi_x(x) + y \<p\>(t).\]  If \(N > 1\), then \(y \in R_{(p)}\) for degree reasons and hence the right-hand side gives a series expansion contradicting our minimality hypothesis.  So, we have \(N = 1\); the class \(y\) lies in the critical degree \(-2q\); and the outer factor of \(t^{N-1}\) is not present in the last expression.\footnote{One can interpret the proof thus far as giving a bound on the amount of \(w\)--torsion needed to get the stability relation described in \Cref{QuillensKeyRelation}.  Our answer is quite surprising: we have found that we need just a single \(w\) (indeed, a single \(t\)), which isn't much stability at all!}  Restricting along \(i\) again to set \(w = t = 0\) and \(P^{C_p}(x) = x^p\), we obtain the equation \[\left. \begin{array}{rr} -x & \text{if \(q > 0\)} \\ x^p - x & \text{if \(q = 0\)} \end{array} \right\} = \phi_x(0) + py.\]
 
-In the first case, where \(q > 0\), it follows that \(MU^{-2q}(X) \subseteq R^{-2q} + pMU^{-2q}(X)\), and since \(MU^{-2q}(X)\) has finite order torsion\footnote{This is a consequence of \(X\) having finitely many cells, \(MU\) having finitely many cells in each degree, and each homotopy group of the stable sphere being finitely generated.} it follows that \(MU^{-2q}(X) = R^{-2q}\).  In the other case, \(x\) can be rewritten as a sum of elements in \(R^{0}\), elements in \(p \widetilde{MU}^{0}(X)\), and elements in \((\widetilde{MU}^0(X))^p\).  Since the ideal \(\widetilde{MU}^0(X)\) is nilpotent, it again follows that \(\widetilde{MU}^0(X) = R^0\), concluding the induction.
+In the first case, where \(q > 0\), it follows that \(MU^{-2q}(X)_{(p)}\) is contained in \(R^{-2q}_{(p)} + pMU^{-2q}(X)_{(p)}\), and since \(MU^{-2q}(X)_{(p)}\) has finite order torsion\footnote{This is a consequence of \(X\) having finitely many cells, \(MU\) having finitely many cells in each degree, and each homotopy group of the stable sphere being finitely generated.} it follows that \(MU^{-2q}(X)_{(p)} = R^{-2q}_{(p)}\).  In the other case, \(x\) can be rewritten as a sum of elements in \(R^{0}_{(p)}\), elements in \(p \widetilde{MU}^{0}(X)_{(p)}\), and elements in \((\widetilde{MU}^0(X)_{(p)})^p\).  Since the ideal \(\widetilde{MU}^0(X)_{(p)}\) is nilpotent, it again follows that \(\widetilde{MU}^0(X)_{(p)} = R^0_{(p)}\), concluding the induction.
 \end{proof}
 
 \begin{corollary}[{\cite[Corollary 5.2]{Quillen}}]\label{QuillenSurjective}
