--- a/quillen.tex
+++ b/quillen.tex
@@ -607,7 +607,7 @@ with \(|\xi_j| = 2p^j-2\) and \(|\tau_j| = 2p^j - 1\). \qed
 \end{theorem}
 \noindent There are odd--dimensional classes in this algebra, and the \emph{graded-commutativity} of the dual mod--\(p\)\index{Steenrod algebra!odd primes}\index{Bockstein} Steenrod algebra means that these classes anti-commute.  This prohibits us both from even writing ``\(\Spec(\HFp_* \HFp)\)'', and this is the first time we have encountered Hindrance~\#\ref{SkewCommutativeDeficiency} from \Cref{TheSteenrodAlgebraSection} in the wild.
 
-Because of this, we will not feel any guilt for taking a completely alternative approach to this calculation.  This other method, due to Quillen, has as its keystone a completely different kind of cohomology operation called a \index{power operation}\textit{power operation}.  These operations are quite technical to describe, but at their core is taking the \(n\){\th} power of a cohomology class---and hence they have a frustrating lack of properties, including failures to be additive and to be stable.  Our goal in this Lecture is just to define these cohomology operations, specialized to the particular setting we will need for Quillen's proof.  Unlike with Steenrod squares, their algebro-geometric interpretation will not be immediately accessible to us, and indeed their eventual reinterpretation in these terms is one of the more hard-won pursuits in this area of mathematics (cf.\ \Cref{PowerOpnsSection}).
+Because of this, we will not feel any guilt for taking a completely alternative approach to this calculation.  This other method, due to Quillen, has as its keystone a completely different kind of cohomology operation called a \index{power operation}\textit{power operation}.  These operations are quite technical to describe, but at their core is taking the \(n\){\th} power of a cohomology class---and hence they have a frustrating lack of properties, including failures to be additive and to be stable.  Our goal in this Lecture is just to define these cohomology operations, specialized to the particular setting we will need for Quillen's proof.  We will accomplish this as early as \Cref{RestrictingSteenrodOpToBasepoint}, and though we proceed from there to sketch how Quillen's methods belong to a general framework, the reader should not hesitate to continue on to \Cref{StabilizingTheMUSteenrodOps} when they grow bored, assured that the discussion of ``Tate power operations'' will not resurface.  Additionally, unlike with Steenrod squares, the algebro-geometric interpretation of these operations will not be immediately accessible to us, and indeed their eventual reinterpretation in these terms is one of the more hard-won pursuits in this area of mathematics---the curious reader will have to wait until \Cref{PowerOpnsSection}.
 
 Power operations arise not just from taking the \(n\){\th} power of a cohomology class but from also remarking on the natural symmetry of that operation.  We record this symmetry using the following technical apparatus:
 \begin{lemma}[{\cite[Examples 6.1.4.2 and 6.1.6.2]{LurieHA}}]
@@ -923,7 +923,7 @@ Here \(x\) is still the \(1\)\textsuperscript{st} Conner--Floyd--Chern class of 
 There is a series expansion \[P^{C_n}(x) = \prod_{j=0}^{n-1} (x +_{MU} [j]_{MU}(t)) = w + \sum_{j=1}^\infty a_j(t) x^j,\] where \(a_j(t)\) is a series with coefficients in the subring \(C \subseteq MU_*\) spanned by the coefficients of the natural \(MU\)--formal group law.  The leading term \[w = e(\rho) = \prod_{j=0}^{n-1} e(\eta^{\otimes j}) = \prod_{j=0}^{n-1} [j]_{MU} (e(\eta)) = (n-1)! t^{n-1} + \sum_{j \ge n} b_j t^j\] is the Euler class of the reduced permutation representation, and, again, the elements \(b_j\) lie in the subring \(C\). \qed
 \end{lemma}
 
-This is about as much information as we can hope to extract in the \(1\)\textsuperscript{st} universal case.  We thus return to our original goal: understanding the action of \(P^{C_n}\) on each of the canonical classes \[u_m\co MU(m) \to MU.\]  We approach this via the splitting principle by first rewriting the formula in \Cref{AjAndBjAreInTheFGLSubring} in a form amenable to direct sums:
+We now turn from the \(1\)\textsuperscript{st} universal case to our original goal: understanding the action of \(P^{C_n}\) on each of the canonical classes \[u_m\co MU(m) \to MU.\]  We approach this via the splitting principle by first rewriting the formula in \Cref{AjAndBjAreInTheFGLSubring} in a form amenable to direct sums:
 \begin{align*}
 P^{C_n}(x) & = \sum_{|\alpha| \le 1} w^{1 - |\alpha|} a_\alpha(t) s_\alpha(x), &
 a_\alpha(t) & = \prod_{j=0}^\infty a_j(t)^{\alpha_j}.
@@ -1030,7 +1030,7 @@ We now turn to the main Theorem.
 \begin{theorem}[{\cite[Theorem 5.1]{Quillen}}]\label{CGenerationForFiniteCplx}
 If \(X\) has the homotopy type of a finite complex, then
 \begin{align*}
-MU^*(X) & = C \cdot \sum_{q \ge 0} MU^q(X), \\
+MU^*(X) & = C \cdot \sum_{q \ge 0} MU^q(X), &
 \widetilde{MU}^*(X) & = C \cdot \sum_{q > 0} MU^q(X).
 \end{align*}
 \end{theorem}
@@ -1060,7 +1060,7 @@ This is the case of \Cref{CGenerationForFiniteCplx} where we set \(X = *\).
 \end{proof}
 
 \begin{remark}
-This proof actually also goes through for \(MO\) as well.  In that case, it's even easier, since the equation \(2 = 0\) in \(\pi_0 MO\) causes much of the algebra to collapse.  The proof does not extend further to cases like \(M\SO\) or \(M\mathit{Sp}\), as explained in the introduction to this Case Study: these bordism theories do not have associated formal group laws, and so we lose the control we had in \Cref{StabilizingTheMUSteenrodOps}.
+This proof actually also goes through for \(MO\) as well.  In that case, it's even easier, since the equation \(2 = 0\) in \(\pi_0 MO\) causes much of the algebra to collapse.  The proof does not extend further to cases like \(M\SO\) or \(M\mathit{Sp}\): these bordism theories do not have associated formal group laws, and so we lose the control we had in \Cref{StabilizingTheMUSteenrodOps}.
 \end{remark}
 
 Take \(\moduli{fgl}\) to be the moduli functor of formal group laws.  Since a formal group law is a power series satisfying some algebraic identities, this moduli object is an affine scheme with coordinate ring \(\sheaf O_{\moduli{fgl}}\).  A rephrasing of \Cref{QuillenSurjective} is that the natural map \[\sheaf O_{\moduli{fgl}} \to MU_*\] is \emph{surjective}.  This is reason enough to start studying \(\moduli{fgl}\) in earnest, which we take up in the next Case Study---but while we're here, if we anachronistically assume one algebraic fact about \(\sheaf O_{\moduli{fgl}}\), \Cref{DummyLazardsThm}, we can prove that the natural map is actually an \emph{isomorphism}.  The place to start is with the following topological observation about mixing complex--orientations:
