--- a/quillen.tex
+++ b/quillen.tex
@@ -607,7 +607,7 @@ with \(|\xi_j| = 2p^j-2\) and \(|\tau_j| = 2p^j - 1\). \qed
 \end{theorem}
 \noindent There are odd--dimensional classes in this algebra, and the \emph{graded-commutativity} of the dual mod--\(p\)\index{Steenrod algebra!odd primes}\index{Bockstein} Steenrod algebra means that these classes anti-commute.  This prohibits us both from even writing ``\(\Spec(\HFp_* \HFp)\)'', and this is the first time we have encountered Hindrance~\#\ref{SkewCommutativeDeficiency} from \Cref{TheSteenrodAlgebraSection} in the wild.
 
-Because of this, we will not feel any guilt for taking a completely alternative approach to this calculation.  This other method, due to Quillen, has as its keystone a completely different kind of cohomology operation called a \index{power operation}\textit{power operation}.  These operations are quite technical to describe, but at their core is taking the \(n\){\th} power of a cohomology class---and hence they have a frustrating lack of properties, including failures to be additive and to be stable.  Our goal in this Lecture is just to define these cohomology operations, specialized to the particular setting we will need for Quillen's proof.  We will accomplish this as early as \Cref{RestrictingSteenrodOpToBasepoint}, and though we proceed from there to sketch how Quillen's methods belong to a general framework, the reader should not hesitate to continue on to \Cref{StabilizingTheMUSteenrodOps} when they grow bored, assured that the discussion of ``Tate power operations'' will not resurface.  Additionally, unlike with Steenrod squares, the algebro-geometric interpretation of these operations will not be immediately accessible to us, and indeed their eventual reinterpretation in these terms is one of the more hard-won pursuits in this area of mathematics---the curious reader will have to wait until \Cref{PowerOpnsSection}.
+Because of this, we will not feel any guilt for taking a completely alternative approach to this calculation.  This other method, due to Quillen, has as its keystone a completely different kind of cohomology operation called a \index{power operation}\textit{power operation}.  These operations are quite technical to describe, but at their core is taking the \(n\){\th} power of a cohomology class---and hence they have a frustrating lack of properties, including failures to be additive and to be stable.  Our goal in this Lecture is just to define these cohomology operations, specialized to the particular setting we will need for Quillen's proof.  We will accomplish this as early as \Cref{PowerOpnsForSubgroupsToo}, and though we proceed from there to sketch how Quillen's methods belong to a general framework, the reader should not hesitate to continue on to \Cref{StabilizingTheMUSteenrodOps} when they grow bored, assured that the discussion of ``Tate power operations'' will not resurface.  Additionally, unlike with Steenrod squares, the algebro-geometric interpretation of these operations will not be immediately accessible to us, and indeed their eventual reinterpretation in these terms is one of the more hard-won pursuits in this area of mathematics---the curious reader will have to wait until \Cref{PowerOpnsSection}.
 
 Power operations arise not just from taking the \(n\){\th} power of a cohomology class but from also remarking on the natural symmetry of that operation.  We record this symmetry using the following technical apparatus:
 \begin{lemma}[{\cite[Examples 6.1.4.2 and 6.1.6.2]{LurieHA}}]
@@ -623,15 +623,6 @@ Given a spectrum \(E\), its \(n\)--fold smash power forms a \index{equivariant s
 \end{center}
 A ring spectrum \(E\) equipped with a suite of factorizations \(\mu_n\) satisfying compatibility laws embodying term collection (i.e., \(x^a \cdot x^b = x^{a+b}\)) and iterated exponentiation (i.e., \((x^a)^b = x^{ab}\)) is called an \index{H infty ring spectrum@\(H_\infty\)--ring spectrum}\textit{\(H_\infty\)--ring spectrum}~\cite[Definition I.3.1]{BMMS}.  The composite \[P^{\Sigma_n}_{\mathrm{ext}}f\co (\Susp^\infty_+ X)^{\sm n}_{h\Sigma_n} \xrightarrow{f^{\sm n}_{h\Sigma_n}} E^{\sm n}_{h\Sigma_n} \xrightarrow{\mu_n} E\] is called the \textit{external (total) \(\Sigma_n\)--power operation} applied to \(f\), and the restriction to the diagonal subspace \[P^{\Sigma_n}f \co \Susp^\infty_+ X \sm \Susp^\infty_+ B\Sigma_n \simeq (\Susp^\infty_+ X)_{h\Sigma_n} \xrightarrow{\Delta_{h\Sigma_n}} (\Susp^\infty_+ X)^{\sm n}_{h\Sigma_n} \xrightarrow{P^{\Sigma_n}_{\mathrm{ext}}f} E\] is called the \textit{(internal total) \(\Sigma_n\)--power operation} applied to \(f\).  We can consider it as a cohomology class lying in \[P^{\Sigma_n} f \in E^0(X \times B\Sigma_n).\]
 
-Cohomology classes \(f \in E^{-q}(X)\) lying in degrees \(q \ne 0\) require more care.  Representing such a class as a map \(f\co \Susp^\infty_+ X \to \S^q \sm E\), the analogous diagram is
-\begin{center}
-\begin{tikzcd}
-(\Susp^\infty_+ X)^{\sm n} \arrow{d} \arrow["f^{\sm n}"]{r} & (\S^q \sm E)^{\sm n} \arrow["\mu"]{r} \arrow{d} & \S^{nq} \sm E \\
-(\Susp^\infty_+ X)^{\sm n}_{h\Sigma_n} \arrow["f^{\sm n}_{h\Sigma_n}"]{r} & (\S^q \sm E)^{\sm n}_{h\Sigma_n} \arrow[equal]{r} & \S^{q\rho}_{h\Sigma_n} \sm E^{\sm n}_{h\Sigma_n} \arrow[densely dotted]{u}[description]{\mu_{n,q}},
-\end{tikzcd}
-\end{center}
-where \(\S^\rho\) is the \index{equivariant spectrum!representation sphere}representation sphere for the permutation representation of \(\Sigma_n\).  Such a system of factorizations is called an \(H_\infty^1\)--ring structure on \(E\)---but in practice these are very uncommon (and in fact can only appear on \(H\F_2\)--algebras~\cite[Section VII.6.1]{BMMS}), and instead a subsystem of factorizations for every \(q \equiv 0 \pmod d\) is called an \(H_\infty^d\)--ring structure~\cite[Definition I.4.3]{BMMS}.  In the same way, these give rise to external and internal power operations on cohomology classes of negative degree (or at least those which are divisible by \(d\)).  We will mostly concern ourselves with the theory of \(H_\infty\)--ring spectra, but we will eventually work with an \(H_\infty^2\)--ring spectrum in the intended application.
-
 \begin{remark}[{\cite[Definition IV.7.1]{BMMS}}]\label{RestrictingSteenrodOpToBasepoint}
 The optional adjective ``total'' is a reference to the following variant of this construction.  By choosing a class in \(E_* B\Sigma_n\), thought of as a functional on \(E^* B\Sigma_n\), the \index{Kronecker pairing}Kronecker pairing of the total power operation with this fixed class gives rise to a truly internal cohomology operation on \(E^* X\) as in the following composite:
 \begin{center}
@@ -641,7 +632,51 @@ The optional adjective ``total'' is a reference to the following variant of this
 \end{center}
 \end{remark}
 
-Some properties of this construction are immediately visible---for instance, it is multiplicative: \[P^{\Sigma_n}(f \cdot g) = P^{\Sigma_n}(f) \cdot P^{\Sigma_n}(g),\] and restriction of \(P^{\Sigma_n}(f)\) to the basepoint in \(\Sigma^\infty_+ B\Sigma_n\) yields the cup power class \(f^n\).  In order to state any further properties, we will need to make some extraneous observations.  First, note that any map of groups \(\phi\co G \to \Sigma_n\) gives a variation on this construction by restriction of diagrams
+Cohomology classes \(f \in E^{-q}(X)\) lying in degrees \(q \ne 0\) require more care.  Passing to the representative \(f\co \Susp^\infty_+ X \to \S^q \sm E\), the analogous diagram is
+\begin{center}
+\begin{tikzcd}
+(\Susp^\infty_+ X)^{\sm n} \arrow{d} \arrow["f^{\sm n}"]{r} & (\S^q \sm E)^{\sm n} \arrow["\mu"]{r} \arrow{d} & \S^{nq} \sm E \\
+(\Susp^\infty_+ X)^{\sm n}_{h\Sigma_n} \arrow["f^{\sm n}_{h\Sigma_n}"]{r} & (\S^q \sm E)^{\sm n}_{h\Sigma_n} \arrow[equal]{r} & \S^{q\rho}_{h\Sigma_n} \sm E^{\sm n}_{h\Sigma_n} \arrow[densely dotted]{u}[description]{\mu_{n,q}},
+\end{tikzcd}
+\end{center}
+where \(\S^\rho\) is the \index{equivariant spectrum!representation sphere}representation sphere for the permutation representation of \(\Sigma_n\).  Such a system of factorizations is called an \(H_\infty^1\)--ring structure on \(E\)---but in practice these are very uncommon,\footnote{In fact, they can only appear on \(H\F_2\)--algebras~\cite[Section VII.6.1]{BMMS}.} and instead a subsystem of factorizations for every \(q \equiv 0 \pmod d\) is called an \(H_\infty^d\)--ring structure~\cite[Definition I.4.3]{BMMS}.  In the same way, these give rise to external and internal power operations on cohomology classes of those negative degrees which are divisible by \(d\).  We will mostly concern ourselves with the theory of \(H_\infty\)--ring spectra in this section, but we will eventually work with \(H_\infty^2\)--ring spectra in the intended application, and so we now describe a naturally occuring \(H_\infty^2\)--ring spectrum structure on the complex bordism spectrum \(MU\)\index{H infty ring spectrum@\(H_\infty\)--ring spectrum!H infinity 2 on MU@\(H_\infty^2\)--structure on \(MU\)}.
+
+\begin{definition}[{\cite[Definition VII.7.4]{Rudyak}}]\label{DefnAssociatedBundle}
+Suppose that \(\xi\co X \to BU(k)\) presents a complex vector bundle of rank \(k\) on \(X\).  The \(n\)--fold direct sum of this bundle gives a new bundle \[X^{\times n} \xrightarrow{\xi^{\oplus n}} BU(k)^{\times n} \xrightarrow{\oplus} BU(n \cdot k)\] of rank \(nk\) on which the symmetric group \(\Sigma_n\) acts.  By taking the (homotopy) \(\Sigma_n\)--quotient of the fiber, total, and base spaces, we produce a vector bundle \(\xi(\Sigma_n)\) on \(X^{\times n}_{h\Sigma_n}\) participating in the diagram
+\begin{center}
+\begin{tikzcd}
+X^{\times n} \arrow["\xi^{\oplus n}"]{r} \arrow{d} & BU(k)^{\times n} \arrow["\oplus"]{r} & BU(nk) \arrow[leftarrow, "\xi(\Sigma_n)"' near end]{lld} \\
+X^{\times n}_{h\Sigma_n} \arrow["\xi^{\oplus n}_{h\Sigma_n}"']{r} & BU(k)^{\times n}_{h\Sigma_n}. \arrow[densely dotted]{ru}[description]{\widetilde \mu_n} \arrow[crossing over, leftarrow]{u}
+\end{tikzcd}
+\end{center}
+The universal case gives the map \(\widetilde \mu_n\).
+\end{definition}
+
+\begin{lemma}[{\cite[Equation VII.7.3]{Rudyak}}]\label{ThomSpectrumOfAssocBundle}
+There is an isomorphism of Thom spectra \[T(\xi(\Sigma_n)) \simeq (T\xi)^{\sm n}_{h\Sigma_n}.\]
+\end{lemma}
+\begin{proof}
+This proof is mostly a matter of having had the idea to write down the Lemma to begin with.  From here, we string basic properties together:
+\begin{align*}
+T(\xi(\Sigma_n)) & = T(\xi^{\oplus n}_{h\Sigma_n}) \tag{definition} \\
+& = T(\xi^{\oplus n})_{h\Sigma_n} \tag{colimits commute with colimits} \\
+& = T(\xi)^{\sm n}_{h\Sigma_n}. \tag{\(T\) is monoidal: \Cref{ThomSpacesAreMonoidal}}
+\end{align*}
+\end{proof}
+
+Applying the Lemma to the universal case produces a factorization \[MU(k)^{\sm n} \to MU(k)^{\sm n}_{h\Sigma_n} \to MU(nk)\] of the unstable multiplication map, and hence a stable factorization \[MU^{\sm n} \to MU^{\sm n}_{h\Sigma_n} \xrightarrow{\mu_n} MU.\]  We now enrich this to an \(H_\infty^2\) structure~(\cite[Section 3.2]{JohnsonNoel}, \cite[Corollary VIII.5.3]{BMMS}): by applying \Cref{ThomSpectrumOfAssocBundle} in reverse, the construction is
+\begin{align*}
+\mu_{n,2q}\co \S^{2qn}_{h\Sigma_n} \sm MU^{\sm n}_{h\Sigma_n} & \xrightarrow{1 \sm \mu_n} \S^{2qn}_{h\Sigma_n} \sm MU \\
+& \simeq T(\mathrm{triv}^{\oplus q}(\Sigma_n) \downarrow B\Sigma_n) \sm MU \tag{\Cref{ThomSpectrumOfAssocBundle}} \\
+& \simeq \Sigma^{2qn}_+ B\Sigma_n \sm MU \tag{Thom isomorphism} \\
+& \to \Sigma^{2qn} MU. \tag{project to basepoint}
+\end{align*}
+
+\begin{remark}\label{PowerOpnsForSubgroupsToo}
+\Cref{DefnAssociatedBundle} and \Cref{ThomSpectrumOfAssocBundle} both hold with \(\Sigma_n\) replaced by a subgroup of \(\Sigma_n\), e.g., the cyclic group \(C_n \le \Sigma_n\).
+\end{remark}
+
+We now return to the setting of a general \(H_\infty\)--ring spectrum \(E\).  Some properties of this construction are immediately visible---for instance, it is multiplicative: \[P^{\Sigma_n}(f \cdot g) = P^{\Sigma_n}(f) \cdot P^{\Sigma_n}(g),\] and restriction of \(P^{\Sigma_n}(f)\) to the basepoint in \(\Sigma^\infty_+ B\Sigma_n\) yields the cup power class \(f^n\).  In order to state any further properties, we will need to make some extraneous observations.  First, note that any map of groups \(\phi\co G \to \Sigma_n\) gives a variation on this construction by restriction of diagrams
 \begin{center}
 \begin{tikzcd}
 * \mmod G \arrow["\phi"]{r} & * \mmod \Sigma_n \arrow[bend left, "(\Susp^\infty_+ X)^{\sm n}"]{r}[name=X, below]{} \arrow[bend right, "\hspace{-1.2em}E^{\sm n}"']{r}[name=E]{} & \CatOf{Spectra}.
@@ -773,43 +808,9 @@ MU^{tC_n} & \simeq \colim_{m \to \infty} \left((MU \sm S^{\C^m})^{hC_n}\right) \
 \end{align*}
 \end{proof}
 
-To apply this machinery in our case, we need only equip \(MU\) with the factorized multiplication maps appearing in the definition of an \(H_\infty\)--ring spectrum.  (In fact, we will note that this enriches to an  \index{H infty ring spectrum@\(H_\infty\)--ring spectrum!H infinity 2 on MU@\(H_\infty^2\)--structure on \(MU\)}\(H_\infty^2\)--ring spectrum structure in the next Lecture.)
-
-\begin{definition}[{\cite[Definition VII.7.4]{Rudyak}}]\label{DefnAssociatedBundle}
-Suppose that \(\xi\co X \to BU(k)\) presents a complex vector bundle of rank \(k\) on \(X\).  The \(n\)--fold direct sum of this bundle gives a new bundle \[X^{\times n} \xrightarrow{\xi^{\oplus n}} BU(k)^{\times n} \xrightarrow{\oplus} BU(n \cdot k)\] of rank \(nk\) on which the symmetric group \(\Sigma_n\) acts.  By taking the (homotopy) \(\Sigma_n\)--quotient of the fiber, total, and base spaces, we produce a vector bundle \(\xi(\Sigma_n)\) on \(X^{\times n}_{h\Sigma_n}\) participating in the diagram
-\begin{center}
-\begin{tikzcd}
-X^{\times n} \arrow["\xi^{\oplus n}"]{r} \arrow{d} & BU(k)^{\times n} \arrow["\oplus"]{r} & BU(nk) \arrow[leftarrow, "\xi(\Sigma_n)"' near end]{lld} \\
-X^{\times n}_{h\Sigma_n} \arrow["\xi^{\oplus n}_{h\Sigma_n}"']{r} & BU(k)^{\times n}_{h\Sigma_n}. \arrow[densely dotted]{ru}[description]{\widetilde \mu_n} \arrow[crossing over, leftarrow]{u}
-\end{tikzcd}
-\end{center}
-The universal case gives the map \(\widetilde \mu_n\).
-\end{definition}
-
-\begin{lemma}[{\cite[Equation VII.7.3]{Rudyak}}]\label{ThomSpectrumOfAssocBundle}
-There is an isomorphism of Thom spectra \[T(\xi(\Sigma_n)) \simeq (T\xi)^{\sm n}_{h\Sigma_n}.\]
-\end{lemma}
-\begin{proof}
-This proof is mostly a matter of having had the idea to write down the Lemma to begin with.  From here, we string basic properties together:
-\begin{align*}
-T(\xi(\Sigma_n)) & = T(\xi^{\oplus n}_{h\Sigma_n}) \tag{definition} \\
-& = T(\xi^{\oplus n})_{h\Sigma_n} \tag{colimits commute with colimits} \\
-& = T(\xi)^{\sm n}_{h\Sigma_n}. \tag{\(T\) is monoidal: \Cref{ThomSpacesAreMonoidal}}
-\end{align*}
-\end{proof}
-
-Applying the Lemma to the universal case produces a factorization \[MU(k)^{\sm n} \to MU(k)^{\sm n}_{h\Sigma_n} \to MU(nk)\] of the unstable multiplication map, and hence a stable factorization \[MU^{\sm n} \to MU^{\sm n}_{h\Sigma_n} \xrightarrow{\mu_n} MU.\]  In fact, this enriches to an \(H_\infty^2\) structure~(\cite[Section 3.2]{JohnsonNoel}, \cite[Corollary VIII.5.3]{BMMS}): by applying \Cref{ThomSpectrumOfAssocBundle} in reverse, the construction is
-\begin{align*}
-\mu_{n,2q}\co \S^{2qn}_{h\Sigma_n} \sm MU^{\sm n}_{h\Sigma_n} & \xrightarrow{1 \sm \mu_n} \S^{2qn}_{h\Sigma_n} \sm MU \\
-& \simeq T(\mathrm{triv}^{\oplus q}(\Sigma_n) \downarrow B\Sigma_n) \sm MU \tag{\Cref{ThomSpectrumOfAssocBundle}} \\
-& \simeq \Sigma^{2qn}_+ B\Sigma_n \sm MU \tag{Thom isomorphism} \\
-& \to \Sigma^{2qn} MU. \tag{project to basepoint}
-\end{align*}
-In the next Lecture we will pursue a computational understanding of \(\mu_{n,2q}\).
-
-\begin{remark}
-\Cref{DefnAssociatedBundle} and \Cref{ThomSpectrumOfAssocBundle} both hold with \(\Sigma_n\) replaced by a subgroup of \(\Sigma_n\), e.g., the cyclic group \(C_n \le \Sigma_n\).
-\end{remark}
+\begin{corollary}
+The non-additivity of the power operations associated to \(MU\) is governed by \(t\)--torsion classes. \qed
+\end{corollary}
 
 \begin{remark}[{\cite[Equations 3.10-11]{Quillen}}]
 The picture Quillen paints of all this is considerably different from ours.  He begins by giving a different presentation of the complex cobordism groups of a manifold \(M\): a complex orientation of a smooth map \(Z \to M\) is a factorization \[Z \xrightarrow{i} E \xrightarrow{\pi} M\] through a complex vector bundle \(\pi\co E \to M\) by an embedding \(i\), as well as a complex structure on the normal bundle \(\nu_i\).  Up to suitable notions of stability (in the dimension of \(E\)) and homotopy equivalence (involving, in particular, isotopies of different embeddings \(i\)), these quotient to give cobordism classes of maps complex-oriented maps \(Z \to M\).  The collection of cobordism classes over \(M\) of codimension \(q\) is isomorphic to \(MU^q(M)\)~\cite[Proposition 1.2]{Quillen}.  Quillen's definition of the power operations is then given in terms of this geometric model: a representative \(f\co Z \to M\) of a cobordism class gives rise to another complex-oriented map \(f^{\times n}\co Z^{\times n} \to M^{\times n}\), and he defines \(P^{C_n}_{\mathrm{ext}}(f)\) to be the postcomposition with \(M^{\times n} \to M^{\times n}_{hC_n}\) (after taking care that the target isn't typically a manifold).  All the properties of his construction must therefore be explored through the lens of groups acting on manifolds.
