fix simeq arrow in 2.6.11

--- a/quillen.tex
+++ b/quillen.tex
@@ -1114,11 +1114,11 @@ The ring \(\sheaf O_{\moduli{fgl}}\) carrying the universal formal group law is 
 The natural map \(\sheaf O_{\moduli{fgl}} \to MU_*\) classifying the formal group law on \(MU_*\) is an isomorphism.
 \end{corollary}
 \begin{proof}
-We proved in \Cref{QuillenSurjective} that this map is surjective.  We also proved in \Cref{RationalFGLsHaveLogarithms} that every rational formal group law has a logarithm, i.e., the long composite on the second row
+We proved in \Cref{QuillenSurjective} that this map is surjective.  We also proved in \Cref{RationalFGLsHaveLogarithms} that every rational formal group law has a unique strict logarithm, i.e., the long composite on the second row
 \begin{center}
 \begin{tikzcd}
-\sheaf O_{\moduli{fgl}} \arrow{r} \arrow{d} & MU_* \arrow{r} \arrow{d} & (H\Z_* MU) \arrow{d} \\
-\sheaf O_{\moduli{fgl}} \otimes \Q \arrow{r} & MU_* \otimes \Q \arrow["\simeq"]{r} & (H\Z_* MU) \otimes \Q
+\sheaf O_{\moduli{fgl}} \arrow{r} \arrow{d} & MU_* \arrow{r} & (H\Z_* MU) \arrow{d} \\
+\sheaf O_{\moduli{fgl}} \otimes \Q \arrow{r} \arrow[bend left=15, "\simeq" near end]{rr} & MU_* \otimes \Q \arrow{r} \arrow[leftarrow, crossing over]{u} & (H\Z_* MU) \otimes \Q
 \end{tikzcd}
 \end{center}
 is an isomorphism.  It follows from \Cref{DummyLazardsThm} that the left-most vertical map is injective, hence the top-left horizontal map is injective, hence it is an isomorphism.
