clean up some language in 2.4

--- a/quillen.tex
+++ b/quillen.tex
@@ -614,7 +614,7 @@ Power operations arise not just from taking the \(n\){\th} power of a cohomology
 Given a spectrum \(E\), its \(n\)--fold smash power forms a \index{equivariant spectrum}\textit{\(\Sigma_n\)--spectrum}, in the sense that there is a natural diagram \(* \mmod \Sigma_n \to \CatOf{Spectra}\) of \(\infty\)--categories which selects \(E^{\sm n}\) on objects.  In the case of $E = \Susp^\infty X$, this diagram agrees with the permutation diagram \(* \mmod \Sigma_n \to X^{\sm n}\) formed in the \(1\)--category \(\CatOf{Spaces}\). \qed
 \end{lemma}
 
-\noindent In turn, a cohomology class \(f\co \Susp^\infty_+ X \to E\) gives rise to a morphism of \(\Sigma_n\)--spectra \[f^{\sm n}\co (\Susp^\infty_+ X)^{\sm n} \to E^{\sm n}.\]  The homotopy colimit of such a diagram is called the \textit{homotopy orbits}\index{equivariant spectrum!homotopy orbits} of the spectrum, and this gives a natural diagram
+\noindent A cohomology class \(f\co \Susp^\infty_+ X \to E\) gives rise to a morphism of \(\Sigma_n\)--spectra \[f^{\sm n}\co (\Susp^\infty_+ X)^{\sm n} \to E^{\sm n}.\]  The homotopy colimit of such a diagram is called the \textit{homotopy orbits}\index{equivariant spectrum!homotopy orbits} of the spectrum, and this gives a natural diagram
 \begin{center}
 \begin{tikzcd}
 (\Susp^\infty_+ X)^{\sm n} \arrow{d} \arrow["f^{\sm n}"]{r} & E^{\sm n} \arrow["\mu"]{r} \arrow{d} & E \\
@@ -639,7 +639,7 @@ Cohomology classes \(f \in E^{-q}(X)\) lying in degrees \(q \ne 0\) require more
 (\Susp^\infty_+ X)^{\sm n}_{h\Sigma_n} \arrow["f^{\sm n}_{h\Sigma_n}"]{r} & (\S^q \sm E)^{\sm n}_{h\Sigma_n} \arrow[equal]{r} & \S^{q\rho}_{h\Sigma_n} \sm E^{\sm n}_{h\Sigma_n} \arrow[densely dotted]{u}[description]{\mu_{n,q}},
 \end{tikzcd}
 \end{center}
-where \(\S^\rho\) is the \index{equivariant spectrum!representation sphere}representation sphere for the permutation representation of \(\Sigma_n\).  Such a system of factorizations is called an \(H_\infty^1\)--ring structure on \(E\)---but in practice these are very uncommon,\footnote{In fact, they can only appear on \(H\F_2\)--algebras~\cite[Section VII.6.1]{BMMS}.} and instead a subsystem of factorizations for every \(q \equiv 0 \pmod d\) is called an \(H_\infty^d\)--ring structure~\cite[Definition I.4.3]{BMMS}.  In the same way, these give rise to external and internal power operations on cohomology classes of those negative degrees which are divisible by \(d\).  We will mostly concern ourselves with the theory of \(H_\infty\)--ring spectra in this section, but we will eventually work with \(H_\infty^2\)--ring spectra in the intended application, and so we now describe a naturally occuring \(H_\infty^2\)--ring spectrum structure on the complex bordism spectrum \(MU\)\index{H infty ring spectrum@\(H_\infty\)--ring spectrum!H infinity 2 on MU@\(H_\infty^2\)--structure on \(MU\)}.
+where \(\S^\rho\) is the \index{equivariant spectrum!representation sphere}representation sphere for the permutation representation of \(\Sigma_n\).  Such a system of factorizations is called an \(H_\infty^1\)--ring structure on \(E\)---but in practice these are very uncommon,\footnote{In fact, they can only appear on \(H\F_2\)--algebras~\cite[Section VII.6.1]{BMMS}.} and instead a subsystem of factorizations for every \(q \equiv 0 \pmod d\) is called an \(H_\infty^d\)--ring structure~\cite[Definition I.4.3]{BMMS}.  In the same way, these give rise to external and internal power operations on cohomology classes of those negative degrees which are divisible by \(d\).  We will mostly concern ourselves with the theory of \(H_\infty\)--ring spectra in this section, but we will eventually work with \(H_\infty^2\)--ring spectra in the intended application, and so we now describe a naturally occuring such structure on \(MU\)\index{H infty ring spectrum@\(H_\infty\)--ring spectrum!H infinity 2 on MU@\(H_\infty^2\)--structure on \(MU\)}.
 
 \begin{definition}[{\cite[Definition VII.7.4]{Rudyak}}]\label{DefnAssociatedBundle}
 Suppose that \(\xi\co X \to BU(k)\) presents a complex vector bundle of rank \(k\) on \(X\).  The \(n\)--fold direct sum of this bundle gives a new bundle \[X^{\times n} \xrightarrow{\xi^{\oplus n}} BU(k)^{\times n} \xrightarrow{\oplus} BU(n \cdot k)\] of rank \(nk\) on which the symmetric group \(\Sigma_n\) acts.  By taking the (homotopy) \(\Sigma_n\)--quotient of the fiber, total, and base spaces, we produce a vector bundle \(\xi(\Sigma_n)\) on \(X^{\times n}_{h\Sigma_n}\) participating in the diagram
@@ -676,7 +676,7 @@ Applying the Lemma to the universal case produces a factorization \[MU(k)^{\sm n
 \Cref{DefnAssociatedBundle} and \Cref{ThomSpectrumOfAssocBundle} both hold with \(\Sigma_n\) replaced by a subgroup of \(\Sigma_n\), e.g., the cyclic group \(C_n \le \Sigma_n\).
 \end{remark}
 
-We now return to the setting of a general \(H_\infty\)--ring spectrum \(E\).  Some properties of this construction are immediately visible---for instance, it is multiplicative: \[P^{\Sigma_n}(f \cdot g) = P^{\Sigma_n}(f) \cdot P^{\Sigma_n}(g),\] and restriction of \(P^{\Sigma_n}(f)\) to the basepoint in \(\Sigma^\infty_+ B\Sigma_n\) yields the cup power class \(f^n\).  In order to state any further properties, we will need to make some extraneous observations.  First, note that any map of groups \(\phi\co G \to \Sigma_n\) gives a variation on this construction by restriction of diagrams
+We now return to the setting of a general \(H_\infty\)--ring spectrum \(E\).  Some properties of power operations are immediately visible---for instance, they are multiplicative: \[P^{\Sigma_n}(f \cdot g) = P^{\Sigma_n}(f) \cdot P^{\Sigma_n}(g),\] and restriction of \(P^{\Sigma_n}(f)\) to the basepoint in \(\Sigma^\infty_+ B\Sigma_n\) yields the cup power class \(f^n\).  In order to state any further properties, we will need to make some extraneous observations.  First, note that any map of groups \(\phi\co G \to \Sigma_n\) gives a variation on this construction by restriction of diagrams
 \begin{center}
 \begin{tikzcd}
 * \mmod G \arrow["\phi"]{r} & * \mmod \Sigma_n \arrow[bend left, "(\Susp^\infty_+ X)^{\sm n}"]{r}[name=X, below]{} \arrow[bend right, "\hspace{-1.2em}E^{\sm n}"']{r}[name=E]{} & \CatOf{Spectra}.
@@ -782,7 +782,7 @@ F_0^{tC_p} \arrow[equiv]{r} & F_1^{tC_p} \arrow[equiv]{r} & \cdots \arrow[equiv]
 Eliminating the intermediate filtration stages with empty filtration quotients, we see that this filtration is equivalent data to a cofiber sequence \[(X^{\sm p})^{tC_p} \to (Y^{\sm p})^{tC_p} \to ((Y/X)^{\sm p})^{tC_p}.\]  Repeating this proof inside of \(E\)--module spectra gives the desired result.
 \end{proof}
 
-The effect of this Lemma is twofold.  For one, the Tate operation is not only additive, it is even \emph{stable}.  Secondly, it suffices to understand the behavior of passing to the Tate construction in the case of \(X = *\), i.e., the effect of the map \(E^{hC_p} \to E^{tC_p}\).  Since we are intending to make a computation, it will at this point be convenient to also specialize to our case of interest, \(E = MU\).
+The effect of this Lemma is twofold.  For one, the Tate operation is not only additive, it is even \emph{stable}.  Secondly, it suffices to understand the behavior of passing to the Tate construction in the case of \(X = *\), i.e., the effect of the map \(E^{hC_p} \to E^{tC_p}\).  Since we are intending to make a particular computation, it will at this point be convenient to return to our case of interest, \(E = MU\).
 
 \begin{theorem}\label{TateConstructionOnMU}
 There is an isomorphism \[\pi_* MU^{tC_n} = MU^* BC_n[x^{-1}],\] where \(x\) is the restriction to \(MU^2 BC_n\) of the canonical class \(x \in MU^2(\CP^\infty)\).\footnote{Everything we say here will actually be valid for any number \(n\), not just a prime, as well as any ring spectrum \(E\) under \(MU\).}
