'homotopy pullback's are just 'pullback's

--- a/finite.tex
+++ b/finite.tex
@@ -274,7 +274,7 @@ This presentation makes the connection to descent much more opaque, but it does 
 \end{remark}
 
 \begin{remark}
-Many algebro-geometric properties lift automatically to the setting of \index{stack!representable}\textit{representable} maps: a map \(f\co \stack M \to \stack N\) is representable when for all affines \(\Spec R \to \stack N\), the homotopy pullback \(\stack M \times_{\stack N} \Spec R\) is affine.  A representable such \(f\) is said to have property \textbf{P} when the natural map \(\stack M \times_{\stack N} \Spec R \to \Spec R\) has property \textbf{P} for every choice of affine over \(\stack N\), giving us intrinsic notions of adjectives like open, flat, \ldots.
+Many algebro-geometric properties lift automatically to the setting of \index{stack!representable}\textit{representable} maps: a map \(f\co \stack M \to \stack N\) is representable when for all affines \(\Spec R \to \stack N\), the pullback \(\stack M \times_{\stack N} \Spec R\) is affine.  A representable such \(f\) is said to have property \textbf{P} when the natural map \(\stack M \times_{\stack N} \Spec R \to \Spec R\) has property \textbf{P} for every choice of affine over \(\stack N\), giving us intrinsic notions of adjectives like open, flat, \ldots.
 \end{remark}
 
 
