--- a/finite.tex
+++ b/finite.tex
@@ -295,7 +295,7 @@ In \Cref{FHGivesComodules} we gave a factorization
 & \CatOf{QCoh}(\context{MUP}) \arrow["{(-)[0]}"]{ru} ,
 \end{tikzcd}
 \end{center}
-and in \Cref{ContextOfMUPExample} we established an equivalence \[\phi\co \context{MUP} \xrightarrow{\simeq} \moduli{fg}.\]  Our program, as outlined in the introduction, is to analyze this functor \(\context{MUP}(-)\) by postcomposing it with \(\phi^*\) and studying the resulting sheaf over \(\moduli{fg}\).  In order to perform such an analysis, we will want a firm grip on the geometry of the stack \(\moduli{fg}\), and in this Lecture we begin by studying the scheme \(\moduli{fgl}\) as well as the natural \index{stack!cover}covering map \[\moduli{fgl} \to \moduli{fg}.\]  Additionally, \Cref{ContextOfMUPExample} was a consequence of \Cref{QuillensTheorem}, which relied on the unproven result stated as \Cref{DummyLazardsThm}, which we will now prove in this section as \Cref{LazardsTheorem}.
+and in \Cref{ContextOfMUPExample} we established an equivalence \[\phi\co \context{MUP} \xrightarrow{\simeq} \moduli{fg}.\]  Our program, as outlined in the introduction, is to analyze this functor \(\context{MUP}(-)\) by postcomposing it with \((\phi^{-1})^*\) and studying the resulting sheaf over \(\moduli{fg}\).  In order to perform such an analysis, we will want a firm grip on the geometry of the stack \(\moduli{fg}\), and in this Lecture we begin by studying the scheme \(\moduli{fgl}\) as well as the natural \index{stack!cover}covering map \[\moduli{fgl} \to \moduli{fg}.\]  Additionally, \Cref{ContextOfMUPExample} was a consequence of \Cref{QuillensTheorem}, which relied on the unproven result stated as \Cref{DummyLazardsThm}, which we will now prove in this section as \Cref{LazardsTheorem}.
 
 \begin{definition}\label{MfglDefn}
 There is an affine scheme \(\moduli{fgl}\) classifying formal group laws.  Begin with the scheme classifying \emph{all} bivariate power series:
