define "infinitesimal thickening"

--- a/quillen.tex
+++ b/quillen.tex
@@ -131,7 +131,7 @@ In the motivating case where \(F \cong \A^n\) is given, we can define \(M\) to b
 \end{proof}
 
 \begin{corollary}[{\cite[Th\'eor\`eme III.2.1]{GrothendieckSGAI}}]
-An \(S\)--point \(s\co S \to X\) of a Noetherian scheme is formally smooth exactly when \(T_s X\) is a free \(R\)--module and for any nilpotent thickenings \(S \to \Spec B \to \Spec B'\) and any solid diagram
+We define a \textit{nilpotent thickening} to be a closed inclusion of schemes whose associated ideal sheaf is nilpotent.  An \(S\)--point \(s\co S \to X\) of a Noetherian scheme is formally smooth exactly when \(T_s X\) is a free \(R\)--module and for any nilpotent thickenings \(S \to \Spec B \to \Spec B'\) and any solid diagram
 \begin{center}
 \begin{tikzcd}[column sep=3em]
 S \arrow{r} \arrow["s"]{rd} & \Spec B \arrow{r} \arrow{d} & \Spec B' \arrow[densely dotted]{ld} \\
