shuffle deck chairs on 2.6.1

--- a/quillen.tex
+++ b/quillen.tex
@@ -131,7 +131,7 @@ In the motivating case where \(F \cong \A^n\) is given, we can define \(M\) to b
 \end{proof}
 
 \begin{corollary}[{\cite[Th\'eor\`eme III.2.1]{GrothendieckSGAI}}]
-We define a \textit{nilpotent thickening} to be a closed inclusion of schemes whose associated ideal sheaf is nilpotent.  An \(S\)--point \(s\co S \to X\) of a Noetherian scheme is formally smooth exactly when \(T_s X\) is a free \(R\)--module and for any nilpotent thickenings \(S \to \Spec B \to \Spec B'\) and any solid diagram
+We define a \textit{nilpotent thickening}\textit{nilpotent thickening}\index{scheme!nilpotent thickening} to be a closed inclusion of schemes whose associated ideal sheaf is nilpotent.  An \(S\)--point \(s\co S \to X\) of a Noetherian scheme is formally smooth exactly when \(T_s X\) is a free \(R\)--module and for any nilpotent thickenings \(S \to \Spec B \to \Spec B'\) and any solid diagram
 \begin{center}
 \begin{tikzcd}[column sep=3em]
 S \arrow{r} \arrow["s"]{rd} & \Spec B \arrow{r} \arrow{d} & \Spec B' \arrow[densely dotted]{ld} \\
@@ -989,25 +989,15 @@ With \Cref{QuillensKeyRelation} in hand, we will now deduce Quillen's major stru
 \end{itemize}
 In the course of working out the main Theorem, we will want to make use of the following property of the class \(t\).
 
+\begin{definition}
+For \(x\) a coordinate on a formal group, the \textit{divided \(n\)--series}\index{formal group!l series@\(\ell\)--series!divided} is determined by the formula \[x \cdot \<n\>(x) = [n](x).\]
+\end{definition}
+
 \begin{lemma}[{\cite[Proposition 4.4]{Quillen}}]\label{QuillensGysinFact}
-Select \(\omega \in MU^*(X \times BC_n)\) and write \[t \cdot \<n\>_{MU}(t) = [n]_{MU}(t).\]  If \(\omega\) satisfies \(t \cdot \omega = 0\), then there exists a class \(y\) with \(\omega = y \cdot \<n\>_{MU}(t)\).
+Let \(X\) be a finite complex.  If a class \(\omega \in MU^*(X \times BC_n)\) satisfies \(t \cdot \omega = 0\), then there exists a class \(y\) with \(\omega = y \cdot \<n\>_{MU}(t)\).
 \end{lemma}
 \begin{proof}[Proof sketch]
-Consider the Gysin sequence for the bundle \(\eta\) as viewed in the cohomology theory \(MU^*(X \times -)\):
-\begin{center}
-\begin{tikzcd}
-MU^*(X \times BC_n) \arrow{rr}{t} & & MU^{*+2}(X \times BC_n) \arrow{ld}{\pi^*} \\
-& \widetilde{MU}^{*+1}(X \times S^1_{hC_n}) \arrow{lu}{\partial}
-\end{tikzcd}
-\end{center}
-Because the action of \(C_n\) on the total space \(S^1\) is free, we have \(S^1_{hC_n} \simeq S^1\).  The suspension isomorphism then rewrites the bottom node as
-\begin{center}
-\begin{tikzcd}
-MU^*(X \times BC_n) \arrow{rr}{t} & & MU^{*+2}(X \times BC_n) \arrow{ld}{\pi^*} \\
-& \widetilde{MU}^*(X) \arrow{lu}{\<n\>_{MU}(t)}.
-\end{tikzcd}
-\end{center}
-In order to justify the image of \(\partial\), one needs to unwrap the definition of the Gysin sequence~\cite[Equation 4.7, Proposition 4.2]{Quillen}, which we elect not to do.  Given this, however, the Lemma statement follows from exactness at the top-left node.
+Consider the following piece of the Gysin sequence for the bundle \(\eta\) as viewed in the cohomology theory \(MU^*(X \times -)\): \[\widetilde{MU}^{*+1}(X \times S^1_{hC_n}) \xrightarrow{\partial} MU^*(X \times BC_n) \xrightarrow{t} MU^{*+2}(X \times BC_n).\]  Because the action of \(C_n\) on the total space \(S^1\) is free, we have \(S^1_{hC_n} \simeq S^1\).  The suspension isomorphism then rewrites the leftmost term as \[\widetilde{MU}^*(X) \xrightarrow{\<n\>_{MU}(t)} MU^*(X \times BC_n) \xrightarrow{t} MU^{*+2}(X \times BC_n).\]  In order to justify the image of \(\partial\), one needs to unwrap the definition of the Gysin sequence~\cite[Equation 4.7, Proposition 4.2]{Quillen}, which we elect not to do.  Given this, however, the Lemma statement follows from exactness at the top-left node.
 \end{proof}
 
 We now turn to the main Theorem.
