fix off-by-ones in 3.3.9

--- a/finite.tex
+++ b/finite.tex
@@ -568,7 +568,7 @@ Suppose first that \(+_\phi\) is \(p\)--typical with invariant differential \[\o
 (\theta_p^* \omega)(x) & = p \dx + \cdots, \\
 ([p]^* \omega)(x) & = p \omega(x) = p \dx + \cdots.
 \end{align*}
-The difference is concentrated in degrees of the form \(p^d-1\), beginning in degree \(p-1\), so we can find an element \(v_1\) such that \[[p]^* \omega(x) - (\theta_p^* \omega(x) + \theta_{v_1}^* V_p \omega(x))\] is also concentrated in degrees of the form \(p^d\) but now starts in degree \(p^2\).  Iterating this gives the equation
+The difference is concentrated in degrees of the form \(p^d-1\), beginning in degree \(p-1\), so we can find an element \(v_1\) such that \[[p]^* \omega(x) - (\theta_p^* \omega(x) + \theta_{v_1}^* V_p \omega(x))\] is also concentrated in degrees of the form \((p^d-1)\) but now starts in degree \((p^2-1)\).  Iterating this gives the equation
 \begin{align*}
 [p]^* \omega & = \theta_p^* \omega + \theta_{v_1}^* V_p^* \omega + \theta_{v_2}^* V_{p^2}^* \omega + \cdots, \\
 \intertext{at which point we can use the invariance property of \(\omega\) to deduce}
@@ -579,7 +579,7 @@ In the other direction, the invariant differential coefficients can be recursive
 \sum_{d=0}^\infty p a_{p^d} x^{p^d-1} \dx & = \sum_{d=0}^\infty \sum_{j=0}^\infty p^d a_{p^j} v_d^{p^j} x^{p^{d+j}-1} \dx \\
 & = \sum_{n=0}^\infty \left( \sum_{k=0}^n a_{p^k} p^{n-k} v_{n-k}^{p^k} \right) x^{p^n-1} \dx,
 \end{align*}
-implicitly taking \(m_1 = 1\) and \(v_0 = p\).
+implicitly taking \(a_1 = 1\) and \(v_0 = p\).
 \end{proof}
 
 \Cref{pTypLogGivesNicePSeries} shows that, at least in the case that the ground ring is an integral domain, the \(p\)--series of a \(p\)--typical formal group law contains exactly as much information as the logarithm itself (and hence fully determines the formal group law).  We make this observation precise in the following important theorem:
