--- a/finite.tex
+++ b/finite.tex
@@ -591,7 +591,7 @@ In the setting of a coordinate on a formal group over a torsion-free ring, the f
 \item For each prime \(\ell \ne p\), the Frobenius \(F_\ell\) vanishes on the coordinate.
 \item The coordinate is in the image of the \(p\)--typicalizing idempotent \(\eps\).
 \end{itemize}
-The second and third conditions \emph{do not} require the torsion-free assumption, and so we use the second condition to define a closed subscheme \(\moduli{fgl}^{\ptyp} \subseteq \moduli{fgl}\), the \textit{moduli of \(p\)--typical formal group laws}.
+The second and third conditions \emph{do not} require the torsion-free assumption, and so we use the second condition to define a closed subscheme \(\moduli{fgl}^{\ptyp} \subseteq \moduli{fgl}\), the \textit{moduli of \(p\)--typical formal group laws}.\footnote{The third condition selects the same functor as the second condition, but it does not as obviously show that this is a closed subscheme of $\moduli{fgl}$ (and hence itself an affine scheme).}
 \end{definition}
 
 \begin{theorem}[{cf.\ \cite[Proposition 5.1]{MillerNotesCobordism}, \cite[Theorem A2.2.3]{RavenelGreenBook}, and the proof of \cite[Proposition 19.10]{HopkinsCOCTALOS}}]\label{KudoArakiIsomorphism}
