number the conditions

--- a/finite.tex
+++ b/finite.tex
@@ -586,11 +586,11 @@ implicitly taking \(a_1 = 1\) and \(v_0 = p\).
 
 \begin{definition}
 In the setting of a coordinate on a formal group over a torsion-free ring, the following conditions are equivalent:
-\begin{itemize}
+\begin{enumerate}
 \item Its invariant differential is \(p\)--typical, as in \Cref{DefnPTypInvDiffl}.
 \item For each prime \(\ell \ne p\), the Frobenius \(F_\ell\) vanishes on the coordinate.
 \item The coordinate is in the image of the \(p\)--typicalizing idempotent \(\eps\).
-\end{itemize}
+\end{enumerate}
 The second and third conditions \emph{do not} require the torsion-free assumption, and so we use the second condition to define a closed subscheme \(\moduli{fgl}^{\ptyp} \subseteq \moduli{fgl}\), the \textit{moduli of \(p\)--typical formal group laws}.\footnote{The third condition selects the same functor as the second condition, but it does not as obviously show that this is a closed subscheme of $\moduli{fgl}$ (and hence itself an affine scheme).}
 \end{definition}
 
