--- a/finite.tex
+++ b/finite.tex
@@ -585,7 +585,7 @@ implicitly taking \(a_1 = 1\) and \(v_0 = p\).
 \Cref{pTypLogGivesNicePSeries} shows that, at least in the case that the ground ring is an integral domain, the \(p\)--series of a \(p\)--typical formal group law contains exactly as much information as the logarithm itself (and hence fully determines the formal group law).  We make this observation precise in the following important definition and theorem:
 
 \begin{definition}
-In the setting of a coordinate on a formal group over a torsion-free ring, the following conditions are equivalent:
+In the setting of a coordinate on a formal group over a torsion-free \(\Z_{(p)}\)--algebra, the following conditions are equivalent:
 \begin{enumerate}
 \item Its invariant differential is \(p\)--typical, as in \Cref{DefnPTypInvDiffl}.
 \item For each prime \(\ell \ne p\), the Frobenius \(F_\ell\) vanishes on the coordinate.
@@ -969,15 +969,15 @@ Coupling \Cref{LEFTRealTheoremWithProof} to our understanding of \(\moduli{fg}\)
 \begin{itemize}
 \item Recall that the moduli of \(p\)--typical group laws is affine, presented in \Cref{KudoArakiIsomorphism} by \[\sheaf O_{\moduli{fgl}^{\ptyp}} \cong \Z_{(p)}[v_1, v_2, \ldots, v_d, \ldots].\]  Since the inclusion of \(p\)--typical group laws into all group laws induces an equivalence of stacks, it is in particular flat, and hence this formula determines a homology theory on finite spectra, called \index{Brown Peterson homology@Brown--Peterson homology}\textit{Brown--Peterson homology}: \[BPP_0(X) := MUP_0(X) \otimes_{MUP_0} BPP_0.\]
 \item A chart for the open substack \(\moduli{fg}^{\le d}\) in terms of \(\moduli{fgl}^{\ptyp}\) was given in \Cref{OpenSubstacksOfMfg} by \(\Spec \Z_{(p)}[v_1, v_2, \ldots, v_d^\pm]\).  Since open maps are in particular flat, it follows that there is a homology theory \(E(d)P\), called \index{Johnson--Wilson homology}\textit{the \(d\){\th} Johnson--Wilson homology}, defined on all spectra by \[E(d)P_0(X) := MUP_0(X) \otimes_{MUP_0} \Z_{(p)}[v_1, v_2, \ldots, v_d^\pm].\]
-\item Similarly, for a formal group \(\Gamma\) of height \(d < \infty\), we produced in \Cref{LubinTateModuliThm} a chart \(\Spf \Z_p\ps{u_1, \ldots, u_{d-1}}\) for its deformation neighborhood.  Since inclusions of deformation neighborhoods of substacks of Noetherian stacks are flat~\cite{Matsumura}, there is a corresponding homology theory \(E_\Gamma{}\), called \index{Morava E theory@Morava \(E\)--theory}\textit{the (discontinuous) Morava \(E\)--theory for \(\Gamma\)}, determined by \[E_\Gamma{}_0(X) := MUP_0(X) \otimes_{MUP_0} \Z_p\ps{u_1, \ldots, u_{d-1}}[u^\pm].\]  In the case that \(\Gamma = \Gamma_d\) is the Honda formal group of height \(d\), the notation is often abbreviated from \(E_{\Gamma_d}\) to merely \(E_d\).
-\item Since \((p, u_1, \ldots, u_{d-1})\) forms a regular sequence on \(E_\Gamma{}_*\), we can form the regular quotient at the level of spectra, using cofiber sequences
+\item Similarly, for a formal group \(\Gamma\) of height \(d < \infty\) over a field \(k\), we produced in \Cref{LubinTateModuliThm} a chart \(\Spf \W_p(k)\ps{u_1, \ldots, u_{d-1}}\) for its deformation neighborhood.  Since inclusions of deformation neighborhoods of substacks of Noetherian stacks are flat~\cite{Matsumura}, there is a corresponding homology theory \(E_\Gamma{}\), called \index{Morava E theory@Morava \(E\)--theory}\textit{the (discontinuous) Morava \(E\)--theory for \(\Gamma\)}, determined by \[E_\Gamma{}_0(X) := MUP_0(X) \otimes_{MUP_0} \W_p(k)\ps{u_1, \ldots, u_{d-1}}[u^\pm].\]  In the case that \(\Gamma = \Gamma_d\) is the Honda formal group of height \(d\), the notation is often abbreviated from \(E_{\Gamma_d}\) to merely \(E_d\).
+\item Since \(\mathfrak m = (p, u_1, \ldots, u_{d-1})\) is a regular ideal in \(E_\Gamma{}_*\), we can model the reduction to the special fiber using the succession of cofiber sequences
 \begin{align*}
 E_\Gamma \xrightarrow{p} E_\Gamma & \to E_\Gamma / (p), \\
 E_\Gamma / (p) \xrightarrow{u_1} E_\Gamma / (p) & \to E_\Gamma / (p, u_1), \\
 & \vdots \\
 E_\Gamma / I_{d-1} \xrightarrow{u_{d-1}} E_\Gamma / I_{d-1} & \to E_\Gamma / I_d.
 \end{align*}
-This determines a spectrum \(K_\Gamma = E_\Gamma / I_d\), and hence determines a homology theory called \index{Morava K theory@Morava \(K\)--theory}\textit{the Morava \(K\)--theory for \(\Gamma\)}.  In the case where \(\Gamma\) comes from the Honda \(p\)--typical formal group law (of height \(d\)), this spectrum is often written as \(K(d)\).  As an edge case, we also set \(K(0) = H\Q\) and \(K(\infty) = \HFp\).\footnote{By \Cref{FGpsOverAlgClosedFields} and \Cref{FieldSpectraAreKTheories} to follow, it often suffices to consider just these spectra \(K(d)\) to make statements about all \(K_\Gamma\).  With more care, it even often suffices to consider \(d \ne \infty\).}
+This determines a spectrum \(K_\Gamma = E_\Gamma / I_d\), and hence determines a homology theory called \index{Morava K theory@Morava \(K\)--theory}\textit{the Morava \(K\)--theory for \(\Gamma\)}, with coefficient ring $K_\Gamma{}_* = k[u^\pm]$.  In the case where \(\Gamma\) comes from the Honda \(p\)--typical formal group law (of height \(d\)), this spectrum is often written as \(K(d)\).  As an edge case, we also set \(K(0) = H\Q\) and \(K(\infty) = \HFp\).\footnote{By \Cref{FGpsOverAlgClosedFields} and \Cref{FieldSpectraAreKTheories} to follow, it often suffices to consider just these spectra \(K(d)\) to make statements about all \(K_\Gamma\).  With more care, it even often suffices to consider \(d \ne \infty\).}
 \item More delicately, there is a version of Morava \(E\)--theory which takes into account the formal topology on \((\moduli{fg})^\wedge_\Gamma\), called \index{}\textit{continuous Morava \(E\)--theory}.  It is defined by the pro-system \(\{E_\Gamma(X) / u^I\}\), where \(I\) ranges over multi-indices and the quotient is again given by cofiber sequences.
 \item There is also a homology theory associated to the closed substack \(\moduli{fg}^{\ge d}\).  Since \(I_d = (p, v_1, \ldots, v_{d-1})\) is generated by a regular sequence on \(BPP_0\), we can directly define the spectrum \(P(d)P\) by a regular quotient: \[P(d)P = BP / (p, v_1, \ldots, v_{d-1}).\]  This spectrum does have the property \(P(d)P_0 = BPP_0 / I_d\) on coefficient rings, but \(P(d)P_0(X) = BPP_0(X) / I_d\) \emph{only} when \(I_d\) forms a regular sequence on \(BPP_0(X)\)---which is reasonably rare among the cases of interest.
 \end{itemize}
@@ -1291,7 +1291,7 @@ The homotopy limit of the tower \[\cdots \to L_d F \to L_{d-1} F \to \cdots \to 
 In addition to furthering the analogy, \Cref{ChromaticConvergence} suggests a method for analyzing the homotopy groups of spheres: we could study the homotopy groups of each \(L_d \S\) and perform the reassembly process encoded by this inverse limit.  Additionally, \Cref{ChromaticFractureSquares} shows that this process is inductive: \(L_d \S\) can be understood in terms of the spectrum \(L_{d-1} \S\), the spectrum \(\widehat L_d \S\), and some gluing data in the form of \(L_{d-1} \widehat L_d \S\).  Hence, we become interested in the homotopy of \(\widehat L_d \S\), which is the target of the \(E_d\)--Adams spectral sequence considered in \Cref{StableContextLecture}.
 
 \begin{theorem}[{\Cref{IdentifyingAdamsE2Page} and \Cref{DefnChromaticHomologyThys}, see also \Cref{Pi2AndInvariantDiffls}, \Cref{DefnOfNilpCompletionAndASS}, and \Cref{FHGivesComodules}}]\label{ASSForLKdS}
-The \(E_d\)--based\index{Bockstein}\footnote{Although the \(K(d)\)--Adams spectral sequence more obviously targets \(\widehat L_d \S\), we have chosen to analyze the \(E_d\)--Adams spectral sequence above because \(K(d)\) fails to satisfy {\CH}.  Starting with \(BPP_0 BPP \cong BPP_0[t_0^{\pm}, t_1, t_2, \ldots]\) from \Cref{DefnChromaticHomologyThys} and \Cref{IdIsAnInvariantIdeal}, we can calculate \(E(d)P_0 E(d)P\) by base-changing this Hopf algebroid: \(E(d)P_0 E(d)P = E(d)P_0 \otimes_{BPP_0} BPP_0 BPP \otimes_{BPP_0} E(d)P_0\), which is again free over \(E(d)P_0\).  Since \(K(d)P\) is formed from \(E(d)P\) by quotienting by a regular sequence, we calculate that \(K(d)P_0 E(d)P\) is free over \(K(d)P_0\), generated by the same summands.  However, when quotienting by the regular sequence \emph{again} to form \(K(d)P_* K(d)P\), the maps in the quotient sequences act by elements in \(I_d = 0\), hence introduce Bocksteins.  The end result is \[K(d)P_* K(d)P = \left(K(d)P_* \otimes_{BPP_*} BPP_* BPP \otimes_{BPP_*} K(d)P_*\right) \otimes \Lambda[\tau_0, \ldots, \tau_{d-1}],\] where \(\tau_j\) in degree \(1\) controls the cofiber of \(E(d)P \xrightarrow{v_j} E(d)P\).  This pattern seems to be quite generic: whenever odd-primary information appears near the formal geometric picture, it comes from a poorly behaved homotopical quotient---some element was killed twice, say, or in some specific case a map was zero but is generically nonzero.  So it is here.}
+The \(E_d\)--based\index{Bockstein}\footnote{Although the \(K(d)\)--Adams spectral sequence more obviously targets \(\widehat L_d \S\), we have chosen to analyze the \(E_d\)--Adams spectral sequence above because \(K(d)\) fails to satisfy {\CH}.  Starting with \(BPP_0 BPP \cong BPP_0[t_0^{\pm}, t_1, t_2, \ldots]\) from \Cref{DefnChromaticHomologyThys} and \Cref{IdIsAnInvariantIdeal}, we can calculate \(E(d)P_0 E(d)P\) by base-changing this Hopf algebroid: \(E(d)P_0 E(d)P = E(d)P_0 \otimes_{BPP_0} BPP_0 BPP \otimes_{BPP_0} E(d)P_0\), which is again free over \(E(d)P_0\).  Since \(K(d)P\) is formed from \(E(d)P\) by quotienting by a regular sequence, we calculate that \(K(d)P_0 E(d)P\) is free over \(K(d)P_0\), generated by the same summands.  However, when quotienting by the regular sequence \emph{again} to form \(K(d)P_* K(d)P\), the maps in the quotient sequences act by elements in \(I_d = 0\), hence introduce Bocksteins.  The end result is \[K(d)P_* K(d)P = \left(K(d)P_* \otimes_{BPP_*} BPP_* BPP \otimes_{BPP_*} K(d)P_*\right) \otimes \Lambda[\tau_0, \ldots, \tau_{d-1}],\] where \(\tau_j\) in degree \(1\) controls the cofiber of \(E_d \xrightarrow{u_j} E_d\).  In this sense, \(E_d\) forms a kind of maximal deformation of \(K(d)P\) as a ring spectrum, since it exhausts the collection of \(K(d)P\) Bocksteins.  Additionally, this behavior of odd-degree classes is quite generic: whenever odd-primary information appears near the formal geometric picture, it seems to come from a poorly behaved homotopical quotient---some element was killed twice, say, or in some specific case a map was zero but is generically nonzero.  So it is here.}
 Adams spectral sequence for the sphere converges strongly to \(\pi_* \widehat L_d \S\).  Writing \(\omega\) for the line bundle on \((\moduli{fg})^\wedge_{\Gamma_d}\) of invariant differentials, we have
 \[\pushQED{\qed}
 E_2^{*, *} = H^*((\moduli{fg})^\wedge_{\Gamma_d}; \omega^{\otimes *}) \Rightarrow \pi_* \widehat L_d \S. \qedhere
